<resources>
    <string name="app_name">SioLab</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- Send Fragment -->
    <string name="send_label">송금하기</string>
    <string name="send_top_exchange_rate_text">1 %s = %s %s</string>
    <string name="send_money_sender_label">보내는 금액</string>
    <string name="send_money_sender_enabled_warning">%s %s 이상일 때 송금 가능</string>
    <string name="send_money_receiver_label">받는 금액</string>

    <!-- Send Money Card Item -->
    <string name="send_money_way_standard">스탠다드</string>
    <string name="send_money_way_express">익스프레스</string>
    <string name="send_money_fee_label">센트비 수수료</string>
    <string name="send_money_detail_label">자세히</string>
    <string name="send_money_bank_label">은행</string>

    <!-- Send Money Bottom Sheet -->
    <string name="send_money_bottom_label">보내는 방법을 선택해 주세요</string>
    <string name="send_money_bottom_later_label">송금 신청 후 나중에 입금하기</string>
    <string name="send_money_bottom_later_desc">내 계좌(%s)에서 안내된 센트비 계좌로 은행 방문/모바일 이체 등을 통해 6시간 내 직접 입금합니다.</string>
    <string name="send_money_bottom_now_label">바로 입금하기</string>
    <string name="send_money_bottom_now_desc">내 계좌(%s)를 자동출금 계좌로 등록하여 송금 신청과 동시에 바로 입금합니다.</string>

    <string name="history_label">송금내역</string>
    <string name="benefit_label">혜택</string>
    <string name="service_center_label">고객센터</string>
    <string name="all_menu_label">전체</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>