<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/sendFragment">

    <fragment
        android:id="@+id/sendFragment"
        android:name="com.example.siolab.presentation.ui.send.SendFragment"
        android:label="@string/send_label"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.siolab.presentation.ui.history.HistoryFragment"
        android:label="@string/history_label"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/benefitFragment"
        android:name="com.example.siolab.presentation.ui.benefit.BenefitFragment"
        android:label="@string/benefit_label"
        tools:layout="@layout/fragment_benefit" />

    <fragment
        android:id="@+id/serviceCenterFragment"
        android:name="com.example.siolab.presentation.ui.service.ServiceCenterFragment"
        android:label="@string/service_center_label"
        tools:layout="@layout/fragment_service_center" />

    <fragment
        android:id="@+id/allMenuFragment"
        android:name="com.example.siolab.presentation.ui.all.AllMenuFragment"
        android:label="@string/all_menu_label"
        tools:layout="@layout/fragment_all_menu" />

</navigation>